# flask-quote-api

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
tests/: test_main.py
